--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Pranavvv Makote| Web Developer</title>
+    <title>Pranav Makote| Web Developer</title>
     <link rel="shortcut icon" type="image/ico" href="image/favicon.ico" />
     <meta
       name="viewport"
@@ -94,7 +94,7 @@
     <div id="home" class="full-page">
       <div class="landing-text">
         <p>Hi, my name is</p>
-        <h1>Pranavvv Makote.</h1>
+        <h1>Pranav Makote.</h1>
         <h1 class="disc">I'm a Web Developer.</h1>
         <div class="row">
           <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
@@ -120,7 +120,7 @@
             <div class="row">
               <div class="col-sm-6 abt-clm aboutme">
                 <p>
-                  I am Pranavvv Makote a mechanical engineer by
+                  I am Pranav Makote a mechanical engineer by
                   degree and Programmer by passion. I completed my Mechanical
                   Engineering.I am deeply passionate about Programming 😍️. 
                   This passion leads me to become a Self-taught Programmer.
@@ -262,6 +262,13 @@
               class="devicon-git-plain"
               src="image/tech/linux.svg"
               alt="Linux"
+            />
+          </div>
+          <div class="col-lg-2 col-md-4 col-sm-4 col-xs-6">
+            <img
+              class="devicon-git-plain"
+              src="image/tech/git.svg"
+              alt="Git"
             />
           </div>
 
