added all links

--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
 
     <div class="social-icons">
       <ul class="vertical-list">
-        <li class="list-item"><a href="" class="fa fa-linkedin fa-2x"></a>
-        <li class="list-item"><a href="" class="fa fa-2x fa-twitter"></a></li>
+        <li class="list-item"><a href="https://www.linkedin.com/in/pranav-makote-5b014717b/" class="fa fa-linkedin fa-2x"></a>
+        <li class="list-item"><a href="https://twitter.com/MakotePranav" class="fa fa-2x fa-twitter"></a></li>
         <li class="list-item"><a href="https://github.com/pranavmak" class="fa fa-2x fa-github"></a></li>
-        <li class="list-item"><a href="#" class="fa fa-2x fa-codepen"></a></li>
       </ul>
     </div>
 
@@ -716,14 +715,12 @@
     
     <footer id="footer">
       <div class="container">
-        <h3>Pranavvv Makote</h3>
+        <h3>Pranav Makote</h3>
         <p>Made with love..</p>
         <div class="social-links">
-          <a href="#" class="twitter"><i class="fa fa-2x fa-twitter"></i></a>
-          <a href="#" class="github"><i class="fa fa-2x fa-github"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="codepen"><i class="fa fa-2x fa-codepen"></i></a>
-          <a href="#" class="linkedin"><i class="fa fa-linkedin fa-2x"></i></a>
+          <a href="https://twitter.com/MakotePranav" class="twitter"><i class="fa fa-2x fa-twitter"></i></a>
+          <a href="https://github.com/pranavmak" class="github"><i class="fa fa-2x fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/pranav-makote-5b014717b/" class="linkedin"><i class="fa fa-linkedin fa-2x"></i></a>
         </div>
         <div class="credits">
           
