--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <div class="landing-text">
         <p>Hi, my name is</p>
         <h1>Pranav Makote.</h1>
-        <h1 class="disc">I'm a Web Developer.</h1>
+        <h1 class="disc">I'm a Web Developer, Web Designer.</h1>
         <div class="row">
           <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
             <p class="discription">
