--- a/index.html
+++ b/index.html
@@ -657,19 +657,19 @@
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>Ichalkaranji,Kolhapur,<br>
+                <p>Pune,<br>
                   Maharashtra, India.</p>
               </div>
 
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>pranav.makote97@.com</p>
+                <p>pranav.makote97@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="icofont-phone"></i>
-                <h4>Call:</h4>
+                <h4>Call Me:</h4>
                 <p>+91 9921621212</p>
               </div>
 
